--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,87 @@
       <version>
         1.2.3
       </version>
+      <scope>
+        compile
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        org.projectlombok
+      </groupId>
+      <artifactId>
+        lombok
+      </artifactId>
+      <version>
+        1.18.34
+      </version>
+      <scope>
+        development
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        junit
+      </groupId>
+      <artifactId>
+        junit
+      </artifactId>
+      <version>
+        4.13.2
+      </version>
+      <scope>
+        test
+      </scope>
+    </dependency>
+    <dependency>
+      <groupId>
+        org.mockito
+      </groupId>
+      <artifactId>
+        mockito-junit-jupiter
+      </artifactId>
+      <version>
+        5.14.2
+      </version>
+      <scope>
+        test
+      </scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>
+          org.apache.maven.plugins
+        </groupId>
+        <artifactId>
+          maven-shade-plugin
+        </artifactId>
+        <version>
+          3.3.0
+        </version>
+        <executions>
+          <execution>
+            <phase>
+              package
+            </phase>
+            <goals>
+              <goal>
+                shade
+              </goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>
+                    com.keyin.hynes.braden.aws.lambda.demo.App
+                  </mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
